# K3PiStudies

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conda_environment.yml  k3pistudies.code-workspace
angular_dists/: RunK3PiStudies.py
angular_dists/include/: K3PiStudies.h  K3PiStudiesHists.h
angular_dists/original_code/: K3PiStudies.C  K3PiStudies.h  K3Pi_TripleProducts.C  McK3Pi_Analysis.C  McK3Pi_Analysis.h
angular_dists/src/: CMakeLists.txt  K3PiStudies.cpp
plotting/: compare_phsp_dists.py
test_expected_vals/for_RunK3PiStudies/: expected.txt
